--- a/apps/regexp/index.css
+++ b/apps/regexp/index.css
@@ -35,7 +35,7 @@ body {
 }
 .reg_textarea{
     padding: 0;
-    width: 954px;
+    /*width: 954px;*/
     resize: none;
     font: 100%"courier new", monospace;
 }
@@ -46,7 +46,7 @@ body {
     padding: 0;
 }
 .mod-regexp {
-    width: 980px;
+    /*width: 980px;*/
     margin: 0 auto;
     padding: 0;
     background: #FFF;
